fixed mobile userhome leaving a gap for chat input

--- a/public/bootstrap/less/trpMobileApp.less
+++ b/public/bootstrap/less/trpMobileApp.less
@@ -62,7 +62,6 @@ header {
 
 #content {
   padding-top: @header-height;
-  padding-bottom: 69px;
 }
 
 #showUserhomeButton {
@@ -92,24 +91,5 @@ header {
 }
 
 #copy-button {
-  display: none;
-}
-
-#userhome {
-
-  br, .trpBodyMedium, .trpBodySmall {
-    display: none;
-  }
-
-  a {
-    .trpHelpBox {
-      box-sizing: border-box;
-      width: 100%;
-      margin-top: 5px;
-    }
-  }
-}
-
-#get-troupe {
   display: none;
 }
